plugins {
    id 'net.fabricmc.fabric-loom' version '1.17.19'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    maven { url = 'https://maven.shedaniel.me/' }
    maven { url = 'https://maven.terraformersmc.com/releases' }
}

dependencies {
    // No `mappings` entry: 26.2 ships unobfuscated with official Mojang
    // names, and Loom uses them directly now that Yarn/Intermediary are gone.
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    // Loom 1.17 no longer needs a "modImplementation" configuration; it
    // detects mod jars automatically, so plain "implementation" is enough.
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    implementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_version}"

    implementation "com.terraformersmc:modmenu:${project.modmenu_version}"

    testImplementation platform('org.junit:junit-bom:5.11.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {}
}
